# VTMDecoder_VLCPlugin

./: README.md
DecoderPluginVLC/: CMakeLists.txt  README.md  README.txt  libVVCDecoder_plugin.cpp  packetizer_helper.h  vvc_demux.cpp  vvc_nal.h  vvc_packetizer.cpp
TsDemuxPluginVLC/: CMakeLists.txt  README.md  README.txt  config.h  ts.c  ts_psi.c  ts_psi_c_with_VVC.patch
